# hs-pdp

./: cabal.project  flake.nix
pdp/: README.md  cabal.nix  default.nix  pdp.cabal
pdp/lib/: PDP.hs
pdp/test/: Main.hs
