cabal-version: 2.4
name: pdp
version: 0.1.0
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Copyright (c) Renzo Carbonara 2023
category: Types
build-type: Simple
synopsis: Phantoms of Departed Proofs. Alternative API for the Ghost of Departed Proofs ideas
description: Phantoms of Departed Proofs. Alternative API for the Ghost of Departed Proofs ideas
homepage: https://github.com/k0001/hs-pdp
bug-reports: https://github.com/k0001/hs-pdp/issues
tested-with: GHC ==9.6.1

source-repository head
  type: git
  location: https://github.com/k0001/hs-pdp
  subdir: pdp

common basic
  default-language: GHC2021
  ghc-options: -O2 -Wall -Wno-simplifiable-class-constraints
  build-depends: base ==4.*,
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DerivingStrategies
    DeriveAnyClass
    LambdaCase
    PatternSynonyms
    RoleAnnotations
    TypeOperators
    ViewPatterns

library
  import: basic
  hs-source-dirs: lib
  exposed-modules: PDP
  build-depends:
    aeson,
    binary,
    cassava,
    exceptions,
    kind-integer,
    kind-rational,
    scientific,
    singletons,
    tagged,

test-suite test
  import: basic
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: pdp
